generator: remove Validate() call for octet-stream content type
